# MedCad

./: CMakeLists.txt  README.md
cmake/: UtilFunctions.cmake
resources/: app_style.qss
src/: main.cpp
src/cadsi_app/: ColorMap.cpp  ColorMap.hpp  DensityWindowSliderWidget.cpp  DensityWindowSliderWidget.hpp  ErrorMessageBox.cpp  ErrorMessageBox.hpp  GlobalSettingsConfigurator.cpp  GlobalSettingsConfigurator.hpp  ImageObject.cpp  ImageObject.hpp  PatientCard.cpp  PatientCard.hpp  PlaneView.cpp  PlaneView.hpp  Preprocessor.cpp  Preprocessor.hpp  PreprocessorTransformationsPipe.cpp  PreprocessorTransformationsPipe.hpp  ScalarBarWidget.cpp  ScalarBarWidget.hpp  SliceMetadata.cpp  SliceMetadata.hpp  main.cpp
src/cadsi_app/dicom/: CadsiLibDicomDeclareMetatype.hpp  DICOMDatabaseDialog.cpp  DICOMDatabaseDialog.hpp  DICOMFromFilesToSqlMapper.cpp  DICOMFromFilesToSqlMapper.hpp  DICOMImageMetaDataTableModel.cpp  DICOMImageMetaDataTableModel.hpp  DICOMImageMetaDataTableModelObject.cpp  DICOMImageMetaDataTableModelObject.hpp  DICOMPatientItemModel.cpp  DICOMPatientItemModel.hpp  DICOMPatientMetaDataTableDelegate.cpp  DICOMPatientMetaDataTableDelegate.hpp  DICOMPatientMetaDataTableModel.cpp  DICOMPatientMetaDataTableModel.hpp  DICOMPatientMetaDataTableModelObject.cpp  DICOMPatientMetaDataTableModelObject.hpp  DICOMPatientTableModel.cpp  DICOMPatientTableModel.hpp  DICOMPlaneViewer.cpp  DICOMPlaneViewer.hpp  DICOMScanDialog.cpp  DICOMScanDialog.hpp  DICOMSeriesListWidgetItem.cpp  DICOMSeriesListWidgetItem.hpp  DICOMSliceMetaDataObject.cpp  DICOMSliceMetaDataObject.hpp
src/cadsi_app/dicom/models/: DICOMData.cpp  DICOMData.hpp  DICOMModel.cpp  DICOMModel.hpp  DICOMPatientTableModel.cpp  DICOMPatientTableModel.hpp  DICOMSeriesListModel.cpp  DICOMSeriesListModel.hpp  DICOMSliceTableModel.cpp  DICOMSliceTableModel.hpp
src/cadsi_app/ui_files/: colormap.ui  dicomdatabasedialog.ui  dicomscandialog.ui  patientcard.ui  planeview.ui  preprocessor.ui  slicemetadata.ui
src/cadsi_lib/: CMakeLists.txt
src/cadsi_lib/examples/: CMakeLists.txt
src/cadsi_lib/examples/src/: example_FilesystemAndSqlDicom.cmake  example_FilesystemAndSqlDicom.cpp  example_ParseDicomDirData.cmake  example_ParseDicomDirData.cpp  example_ParseYmlColorMapsFiles.cmake  example_ParseYmlColorMapsFiles.cpp  example_ParseYmlColorsFiles.cmake  example_ParseYmlColorsFiles.cpp  example_ParseYmlVolumesFiles.cmake  example_ParseYmlVolumesFiles.cpp  example_PreviewImageLookup.cmake  example_PreviewImageLookup.cpp  example_SqliteDicom.cmake  example_SqliteDicom.cpp
src/cadsi_lib/include/cadsi_lib/: OperationStatus.hpp  Result.hpp
src/cadsi_lib/include/cadsi_lib/color_maps/providers/: ColorMapsProvider.hpp  GlobalColorMapsProvider.hpp  YamlColorMapsProvider.hpp
src/cadsi_lib/include/cadsi_lib/colors/providers/: ColorsProvider.hpp  GlobalColorsProvider.hpp  YamlColorsProvider.hpp
src/cadsi_lib/include/cadsi_lib/dicom/: DicomDataBase.hpp  DicomImage.hpp  DicomMetaDataHashCollection.hpp  DicomPatient.hpp  DicomSeries.hpp  DicomSqlTablesInspector.cpp  DicomSqlTablesInspector.hpp  DicomTagStdHashSpecialization.hpp  PreviewImage.hpp  SqliteDicomDataBase.hpp  SqliteDicomDataMapper.hpp  cadsiDicomDataElement.hpp
src/cadsi_lib/include/cadsi_lib/dicom/providers/: DicomImageDataProvider.hpp  DicomProvider.hpp  FileDataDicomProvider.hpp
src/cadsi_lib/include/cadsi_lib/dicom/writers/: DicomWriter.hpp
src/cadsi_lib/include/cadsi_lib/file_data/: FileDataErrors.hpp
src/cadsi_lib/include/cadsi_lib/file_data/providers/: FileDataProvider.hpp  YamlFileDataProvider.hpp
src/cadsi_lib/include/cadsi_lib/geometry/: Mesh.hpp  Plane.hpp  Point3d.hpp  Vector3d.hpp
src/cadsi_lib/include/cadsi_lib/logs/: CadsiLogger.hpp
src/cadsi_lib/include/cadsi_lib/volumes/: VolumeErrorCodes.hpp  VolumeImage.hpp  VolumeImageTransformations.hpp  VolumeObject.hpp  VolumeRenderParams.hpp
src/cadsi_lib/include/cadsi_lib/volumes/providers/: GlobalVolumeProvider.hpp  VolumesProvider.hpp  YamlVolumesProvider.hpp
src/cadsi_lib/include/cadsi_lib/yaml/: YamlDeserializable.hpp
src/cadsi_lib/src/cadsi_lib/color_maps/providers/: ColorMapsProvider.cpp  GlobalColorMapsProvider.cpp  YamlColorMapsProvider.cpp
src/cadsi_lib/src/cadsi_lib/colors/providers/: GlobalColorsProvider.cpp  YamlColorsProvider.cpp
src/cadsi_lib/src/cadsi_lib/dicom/: DicomDataBase.cpp  DicomImage.cpp  DicomMetaDataHashCollection.cpp  DicomPatient.cpp  DicomSeries.cpp  DicomSqlTablesInspector.cpp  PreviewImage.cpp  SqliteDicomDataBase.cpp  SqliteDicomDataMapper.cpp  cadsiDicomDataElement.cpp
src/cadsi_lib/src/cadsi_lib/dicom/providers/: DicomImageDataProvider.cpp  FileDataDicomProvider.cpp
src/cadsi_lib/src/cadsi_lib/file_data/providers/: YamlFileDataProvider.cpp
src/cadsi_lib/src/cadsi_lib/geometry/: Mesh.cpp  Plane.cpp  Point3d.cpp  Vector3d.cpp
src/cadsi_lib/src/cadsi_lib/logs/: CadsiLogger.cpp
src/cadsi_lib/src/cadsi_lib/volumes/: VolumeImage.cpp  VolumeImageTransformations.cpp  VolumeObject.cpp  VolumeRenderParams.cpp
src/cadsi_lib/src/cadsi_lib/volumes/providers/: GlobalVolumeProvider.cpp  VolumesProvider.cpp  YamlVolumesProvider.cpp
src/cadsi_lib/tests/: CMakeLists.txt
src/cadsi_lib/tests/providers/: tst_YamlColorMapsProvider.cmake  tst_YamlColorMapsProvider.cpp  tst_YamlColorsProvider.cmake  tst_YamlColorsProvider.cpp  tst_YamlVolumesProvider.cmake  tst_YamlVolumesProvider.cpp
